--- a/src/styles/homeheader.scss
+++ b/src/styles/homeheader.scss
@@ -37,29 +37,41 @@
     }
         
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 851px) {
     .headerLightColour {
         color: $primary-dark-colour;
     }
-    .headDarkColour {
-        padding-left: 10px;
-       
-        background-color: rgba(255, 255, 255, 0.75);
-         
-        
-    }
     .headerOne {
         
-        margin-left: -130px; 
-        padding-right: 10px;
+        background-color: rgba(255, 255, 255, 0.30);
+        padding: 0 20px 0px 20px;
     }
     .headerTwo {
-        
-        margin-top: -30px;
-        margin-left: 70px;
-        padding-top: 7px;
-        padding-right: 12px;
-        
-    }
-        
+        background-color: rgba(255, 255, 255, 0.30);
+        padding: 0 20px 0 20px;
+        margin-top: -23px;
+    }       
 }
+@media screen and (max-width: 426px) {
+    .alignHeader {
+        display:table;
+        margin: 0 auto;
+
+       
+    }
+    .headerOne {
+        font-weight: 200;
+        text-align: center;
+        margin-left: 0;
+    }
+    
+    .headerTwo {
+        font-weight: 200;
+        text-align: center;
+        margin-left: 0px;
+        
+        padding: 0 0px 0 20px;
+    }
+}
+
+
