Added bootstrap project.

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -4,7 +4,7 @@
     margin-left: -20px;
 }
 .iconSingleWrap {
-    margin: 20px; z-index: -1; 
+    margin: 20px;
 }
 .cvButton {
     @include primary-paragraph-font;
