removed commented out margin on icons.scss

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -3,9 +3,10 @@
     @include flex;
     margin-left: -20px;
 }
-//.iconSingleWrap {
-  //  margin: 20px;
-//}
+.iconSingleWrap {
+    margin: 20px;
+}
+
 .cvButton {
     @include primary-paragraph-font;
     background-color: $primary-dark-colour;
