removed curser pointer for now

--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -13,7 +13,7 @@
 .iconSingleWrapSkills {
     margin: 60px;
     color: $primary-light-colour;
-    cursor: pointer;
+    //cursor: pointer;
     // adding positin relative so that icons in side can be position absolut to this element the parent.
     position: relative;
 }
