--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -3,6 +3,10 @@
 .footerWrapper {
     background-color: $primary-light-colour;
     height: 170px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 .contactFooter {
     
@@ -10,7 +14,7 @@
     font-weight: 100;
     text-align: center;
     color: $primary-dark-colour;
-    padding-top: 50px;
+    padding-top: 15px;
 }
 .footerPara {
     @include primary-heading-font;
