--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,32 +1,38 @@
 @import '../App.scss';
-
 .mobileMenu{
     display: none;
 }
+
 .menu {
     position: sticky;
     top: 0;
+    text-align: left;
+    margin: 0 auto;
+    width: 43vh;
+    margin-top: -8vh;
+    margin-bottom: 38vh
     
 }
 .navBar {
     @include flex;
-    font-size: 20px;
+    font-size: 16px;
     text-transform: uppercase; 
-    background-color: $primary-light-colour;
+    //background-color: $primary-dark-colour;
+    font-weight: 100;
 
 }
 
 .nav {
-    list-style-type: none;
-    @include flex-end;
-    margin: 30px 0 0 0;
-    width: 50%;
-    padding-right: 30px;
-    padding-bottom: 30px
+    list-style-type: none;   
+}
+
+li {
+    padding: 10px;
 }
 li a {
     @include primary-heading-font;
-    color: $primary-dark-colour; 
+    color: $primary-light-colour;
+    
   }
   
   li a:hover {
@@ -36,17 +42,7 @@ li a {
 
 .navLink {
     text-decoration: none;
-    margin: 0 20px 0 20px;
-   
-}
-
-.imagesWrapper {
-    background-color: $primary-dark-colour;
-    width: 50%;
-}
-.logo {
-    margin: 15px 0 15px 25px;
-  
+    //margin: 0 20px 0 20px;
 }
 
 
@@ -66,10 +62,7 @@ li a {
     }
 }
 @media screen and (max-width: 986px) {
-    .imagesWrapper {
-        background-color: $primary-light-colour;
-        width: 50%;
-    }  
+   
 }
 
 /////////////////// hamburger meny:
